# Fine-VLA

./: .gitignore  README.md  parse_config.py  pyproject.toml  requirements.txt  retrieval_interface.html  run_retrieval.py  test.py  train.py
base/: base_dataset.py
configs/: ntu.json
data_loader/: NTU_dataset.py  data_loader.py
exps/pretrained/: config.json
model/: metric.py
notebooks/: NTU_test.ipynb  base+finetune.ipynb  data_load.ipynb  dataset.ipynb  dd.ipynb  inference.ipynb  network.ipynb  train.ipynb  video_embedding.ipynb
scripts/: finetune.py  parse_config.py  test.py  train.py  vjepa2.py
src/data/: NTU_dataset.py  base_dataset.py  data_loader.py
src/exps/pretrained/: config.json
src/logger/: logger.py  visualization.py
src/model/: model.py  text_augmentation.py  video_transformer.py
src/trainer/: trainer.py
src/utils/: results.py  video.py
