[project]
name = "fine-vla"
version = "0.1.0"
description = "A V-JEPA-based encoder for fine-grained action video retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrdict==2.0.1",
    "av>=10.0.0",
    "decord>=0.6.0",
    "einops>=0.4.0",
    "humanize>=4.0.0",
    "matplotlib>=3.5.0",
    "neptune-client>=0.16.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "pillow>=8.3.1",
    "pyyaml>=5.4.1",
    "requests>=2.25.1",
    "sacred>=0.8.2",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "setuptools>=80.0.0",
    "timm>=0.6.0",
    "torch>=1.12.0",
    "torchaudio>=0.12.0",
    "torchvision>=0.13.0",
    "tqdm>=4.60.0",
    "transformers>=4.20.0",
]